deploy/kube/rabbit.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 'domicile'
  name: 'domicile-rmq'
spec:
  selector:
    matchLabels:
      app: 'domicile-rmq'
  template:
    metadata:
      labels:
        app: 'domicile-rmq'
    spec:
      containers:
      - name: rabbit
        image: rabbitmq:3.9.16-alpine
        startupProbe:
          exec:
            command: ['rabbitmq-diagnostics', 'check_running', '-q']
          failureThreshold: 30
          periodSeconds: 5
          timeoutSeconds: 10
        resources:
          limits:
            memory: '200Mi'
            cpu: '250m'
        ports:
        - containerPort: 5672
          name: amqp
---
apiVersion: v1
kind: Service
metadata:
  namespace: 'domicile'
  name: 'domicile-rmq-service'
spec:
  selector:
    app: 'domicile-rmq'
  ports:
  - port: 5672
    targetPort: amqp

---
