deploy/kube/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: domicile
  name: domicile-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: domicile-app
  template:
    metadata:
      labels:
        app: domicile-app
    spec:
      containers:
        - name: app
          image: domicile:latest
          readinessProbe:
            httpGet:
              path: /api/health
              port: api-port
            initialDelaySeconds: 5
            periodSeconds: 10
          command: ['/bin/sh']
          args:
            - -c
            - >-
              alembic upgrade head &&
              python -m domicile
          resources:
            limits:
              memory: '200Mi'
              cpu: '100m'
          ports:
            - containerPort: 8000
              name: api-port
---
apiVersion: v1
kind: Service
metadata:
  namespace: domicile
  name: domicile-app-service
spec:
  selector:
    app: domicile-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: api-port
      name: api-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domicile-app
  namespace: domicile
  labels:
    name: domicile-app
spec:
  rules:
    - host: domicile.local
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: domicile-app-service
                port:
                  name: api-port

---
